# rust-knowledge-base

./: .env  Cargo.toml  README.md
migrations/2023-05-26-202155_create_person/: down.sql  up.sql
src/: main.rs  person.rs  person_diesel.rs  schema.rs
