[package]
name = "rust-knowledge-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.23", features = ["derive"] }
diesel = { version = "2.2.3", features = ["postgres"] }
postgres = "0.19.5"
redis = "0.23.0"
serde = "1.0.163"
serde_derive = "1.0.163"
